Fix visible brand logo rendering

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,22 @@
 @import url('base-styles.css');
 @import url('polish.css');
 
-/* Global brand mark override */
 .brand img {
-  content: url('unigo-mark.svg');
-  object-fit: contain;
+  display: none;
+}
+
+.brand::before {
+  content: "";
+  width: 40px;
+  height: 40px;
+  flex: 0 0 40px;
+  background: url('favicon.svg?v=20260720-3') center / contain no-repeat;
+}
+
+@media (max-width: 700px) {
+  .brand::before {
+    width: 34px;
+    height: 34px;
+    flex-basis: 34px;
+  }
 }
